--- a/livraria/pom.xml
+++ b/livraria/pom.xml
@@ -70,7 +70,12 @@
 			</exclusions>
 			
 		</dependency>
-		
+
+		<dependency>
+		    <groupId>com.fasterxml.jackson.module</groupId>
+		    <artifactId>jackson-module-parameter-names</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
