--- a/livraria/pom.xml
+++ b/livraria/pom.xml
@@ -75,6 +75,12 @@
 		    <groupId>com.fasterxml.jackson.module</groupId>
 		    <artifactId>jackson-module-parameter-names</artifactId>
 		</dependency>
+		
+		<dependency>
+    		<groupId>br.com.caelum.stella</groupId>
+    		<artifactId>caelum-stella-core</artifactId>
+    		<version>2.1.2</version>
+  		</dependency>
 
 	</dependencies>
 
