--- a/livraria/src/main/resources/application.properties
+++ b/livraria/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/livraria?createDatabaseIfNotEx
 spring.datasource.username=root
 spring.datasource.password=@Senha123
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+// spring.jpa.hibernate.ddl-auto=create
