--- a/livraria/pom.xml
+++ b/livraria/pom.xml
@@ -82,6 +82,12 @@
     		<version>2.1.2</version>
   		</dependency>
 
+		<dependency>
+    		<groupId>org.mindrot</groupId>
+   			<artifactId>jbcrypt</artifactId>
+   			<version>0.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
