--- a/livraria/src/main/resources/application.properties
+++ b/livraria/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port = 8082
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/livraria?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=@Senha123
+spring.datasource.password=
 spring.jpa.show-sql=true
-// spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
