--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-js-pagination": "^3.0.3",
     "react-modal": "^3.16.1",
     "react-native-vector-icons": "^9.2.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
